# HFT-Model

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  plot.py  requirements.txt
include/: Arrival.h  Model.h  Parameters.h  Plotter.h  Simulation.h  Simulator.h  Statistics.h  Writer.h
plot/: points.csv
src/: Arrival.cpp  CMakeLists.txt  Model.cpp  Parameters.cpp  Plotter.cpp  Simulation.cpp  Simulator.cpp  Statistic.cpp  Writer.cpp  main.cpp
